<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_vclip</name>
  <version>0.0.0</version>
  <description>The choreonoid_vclip package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>vclipeigen</depend>
</package>
